@startuml
skinparam classAttributeIconSize 0

' Classes principales
class club {
    <u>num_club</u> : ID
    nom_club : String
    adresse : String
    num_telephone : String
    ville : String
    departement : String
    region : String
}

class utilisateur {
    <u>num_utilisateur</u> : ID
    nom : String
    prenom : String
    adresse : String
    age : int
    login : String
    mot_de_passe : String
    photo_profil_url : String
    type_compte : enum {'prive', 'public'}
}

class concours {
    <u>num_concours</u> : ID
    theme : String
    description : String
    date_debut : Date
    date_fin : Date
    etat : enum {'pas_commence', 'en_cours', 'attente', 'resultat', 'evalue'}
}

class dessin {
    <u>num_dessin</u> : ID
    commentaire : String
    classement : int
    date_remise : Date
    le_dessin : Blob
}

class evaluation {
    date_evaluation : Date
    note : float
    commentaire : String
}

' Sous-classes d'Utilisateur
class competiteur {
    date_premiere_participation : Date
}

class evaluateur {
    specialite : String
    xp : int
}

class president {
    prime : float
}

class administrateur {
    date_debut : Date
}

class directeur {
    date_debut : Date
}

' Héritages
utilisateur <|-- competiteur
utilisateur <|-- evaluateur
utilisateur <|-- president
utilisateur <|-- administrateur
utilisateur <|-- directeur

' Associations
club "1" -- "*" utilisateur : adherents >
club "6..*" -- "*" concours : participe >
club "1" - "1" directeur : dirige <

concours "1" -- "*" dessin : porte_sur >
concours "*" -- "1" president : preside <
concours "*" --- "*" evaluateur : jury <

competiteur "1" -- "*" dessin : soumet >

dessin "*" -- "2" evaluateur : evalue <
(dessin, evaluateur) .. evaluation

@enduml
